--- a/Week 2/style.css
+++ b/Week 2/style.css
@@ -4,6 +4,7 @@
     position:relative;
     left:  0;
     width: 75%;   
+    top:20px;
 }
 #inner_content{
     background-color: blue;
@@ -32,4 +33,8 @@ table{
 }
 section{
     height:20px;
+}
+#space{
+    position:relative;
+    top:20px;
 }
